--- a/pyproject.toml
+++ b/pyproject.toml
@@ -28,3 +28,36 @@ dev = [
     "pytest-asyncio>=1.3.0",
     "ruff>=0.14.7",
 ]
+
+[tool.ruff]
+line-length = 100
+target-version = "py314"
+src = ["src", "tests"]
+
+[tool.ruff.lint]
+select = ["E", "F", "I", "B"]
+ignore = []
+
+[tool.ruff.format]
+quote-style = "double"
+indent-style = "space"
+line-ending = "lf"
+
+[tool.mypy]
+python_version = "3.14"
+mypy_path = ["src"]
+strict = false
+disallow_untyped_defs = true
+warn_unused_ignores = true
+warn_redundant_casts = true
+warn_unused_configs = true
+exclude = ["tests/"]
+plugins = []
+
+[tool.pytest.ini_options]
+minversion = "8.0"
+addopts = "-q"
+testpaths = ["tests"]
+
+[tool.pytest.ini_options.markers]
+asyncio = "mark a test as async"
